connected to the DB

--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "request": "^2.88.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server",
+    "server": "nodemon server"
+
   },
   "eslintConfig": {
     "extends": "react-app"
